2009-09-07  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* dwarf.c (process_debug_info): Support section padding abbrev codes.

2009-09-07  Tristan Gingold  <gingold@adacore.com>

	* po/binutils.pot: Regenerate.

2009-09-05  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* Makefile.am (sysdump.o): Depend on sysroff.c.
	* Makefile.in: Regenerate.

2009-09-05  Martin Thuresson  <martin@mtme.org>

	* ieee.c (ieee_read_cxx_misc, ieee_read_cxx_class,
	ieee_read_reference): Rename variables named class to cxxclass.

2009-09-04  Tristan Gingold  <gingold@adacore.com>

	* BRANCHES: Add binutils-2_20-branch.

2009-09-04  Tristan Gingold  <gingold@adacore.com>

	* NEWS: Add marker for 2.20.

2009-09-04  Timo Kreuzer  <timo.kreuzer@web.de>

	* dlltool.c (delayimp_name): Add new global variable
	(usage, long_options, main): Add new option "-y" / "--output-delaylib"
	(struct mac): Add fields how_dljtab_size, how_dljtab_roff1, 
	how_dljtab_roff2, how_dljtab, trampoline.
	(i386_dljtab): Add binary stub for x86 delay import.
	(i386_trampoline): Add text assembly stub for x86 delay import.
	(mtable): Add delay import data for M386 and MX86 only.
	(make_delay_head): New function.
	(make_one_lib_file): New arg delay creates delay-load import stub.
	(gen_lib_file): New arg delay likewise.
	(HOW_JTAB, HOW_JTAB_SIZE, HOW_JTAB_ROFF): New arg delay likewise.
	(HOW_JTAB_ROFF2, HOW_JTAB_ROFF3): New macros for delay import.
	(make_tail): Convert hard TABS embedded in strings to "\t" escapes.
	* NEWS: Mention new feature.  Also fix whitespace.
	* doc/binutils.texi: Updated dlltool documentation.

2009-09-02  Tristan Gingold  <gingold@adacore.com>

	* configure.com: Do not copy makefile.vms-in to makefile.vms
	* makefile.vms-in: Renamed to...
	* makefile.vms: ... this usual name as it is not processed anymore.
	Remove WRITE_DEBUG_OBJS (unused) and reorder object files for
	objdump.exe.

2009-09-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
