@@ -1,5 +1,10 @@
 2009-09-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
+	* readelf.c (is_none_reloc <EM_XTENSA_OLD>, is_none_reloc <EM_XTENSA>):
+	New.
+
+2009-09-07  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
 	* dwarf.c (process_debug_info): Support section padding abbrev codes.
 
 2009-09-07  Tristan Gingold  <gingold@adacore.com>
